--- a/frontend_v3/package.json
+++ b/frontend_v3/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "axios": "^1.13.4",
     "framer-motion": "^12.29.2",
+    "jssip": "^3.13.4",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/jssip": "^3.5.3",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
