--- a/frontend_v3/Dockerfile
+++ b/frontend_v3/Dockerfile
@@ -1,5 +1,5 @@
 # Stage 1: Build the React application
-FROM node:20-alpine AS build
+FROM node:20 AS build
 
 WORKDIR /app
 
@@ -12,7 +12,7 @@ COPY . .
 RUN npm run build
 
 # Stage 2: Serve the application using Nginx
-FROM nginx:stable-alpine
+FROM nginx:latest
 
 # Copy the build output from the previous stage to Nginx's html directory
 COPY --from=build /app/dist /usr/share/nginx/html
